# thrift-http-ws-server

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml
browser-nodejs/: index.js  package-lock.json  package.json  webpack.config.js
browser-nodejs/lib/: thrift-0.14.0.tgz
browser-nodejs/src/: index.html  sample.js
cmake/: thrift-http-ws-serverConfig.cmake.in
include/bda/: Helpers.hh  ThriftHTTPWSServer.hh  ThriftHelper.hh
src/: ThriftHTTPWSServer.cc  ThriftHelper.cc
test/src/: TestThriftAPICloneFactory.cc  TestThriftAPICloneFactory.hh  TestThriftAPIHandler.cc  TestThriftAPIHandler.hh  ThriftHTTPWSServerDemo.cc
test/thrift/: TestThriftAPI.thrift
